Fix issue with nav being partially clipped on smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -22,7 +22,9 @@ body {
     grid-template-rows: 1fr 220px;
 }
 .canvas-wrapper {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .phone-container {
@@ -68,7 +70,7 @@ body {
 
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 0.8fr 0.9fr 1fr 0.4fr;
 }
 
 .ui-controls * {
